# Python-API-Development

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yaml  docker-compose_as_text.txt  docker_up_logs.txt  grafana.logs  main.py  notes.md  notes.txt  postgresql.logs  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test.py  video_index.txt
alembic/: env.py
alembic/versions/: 431cc71c69a4_create_all_tables_with_autogenerate.py
app/: add_data.py  add_integration_sources.py  main.py  utils.py
app/routers/: auth.py  authentication.py  posts.py  users.py  votes.py
authetication/: oauth2.py
db/: database.ini  database.py  db_orm.py  db_utils.py  docker-compose.yaml  exceptions.py  models.py  repository.py  schemas.py  utils.py
grafana/: exceptions.py  grafana_dashboard.json  grafana_utils.py  utils.py
prometheus/: config.ini  prometheus_utils.py
pydantic_models/: posts.py  users.py  votes.py
tests/: conftest.py
tests/fastapi_app/: test_crud.py
tests/fastapi_app/routers/: test_posts.py  test_users.py
