[tool.poetry]
name = "python-api-development"
version = "0.1.0"
description = "This will be my interpretation of what I'll learn from the 20h course on youtube."
authors = ["I T <ivo.a.v.tavares@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_api_development"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
pre-commit = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
